--- a/table1.tex
+++ b/table1.tex
@@ -1,34 +1,33 @@
+\documentclass{article}
+\usepackage{booktabs} % for better-looking tables
 
-% Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Fri, Feb 09, 2024 - 03:59:17 PM
-\begin{table}[!htbp] \centering 
-  \caption{} 
-  \label{} 
-\begin{tabular}{@{\extracolsep{5pt}}lcccccc} 
-\\[-1.8ex]\hline 
-\hline \\[-1.8ex] 
- & \multicolumn{6}{c}{\textit{Dependent variable:}} \\ 
-\cline{2-7} 
-\\[-1.8ex] & \multicolumn{5}{c}{hate\_violence\_means} & formula.6 \\ 
-\\[-1.8ex] & (1) & (2) & (3) & (4) & (5) & (6)\\ 
-\hline \\[-1.8ex] 
- Mate Competition & 0.437$^{**}$ & 0.263$^{**}$ & 0.236$^{**}$ & 0.206$^{**}$ & 0.185$^{**}$ & 0.155$^{**}$ \\ 
-  & (0.016) & (0.020) & (0.021) & (0.019) & (0.019) & (0.019) \\ 
-  & & & & & & \\ 
- Job Competition &  & 0.250$^{**}$ & 0.236$^{**}$ & 0.077$^{**}$ & 0.065$^{**}$ & 0.056$^{**}$ \\ 
-  &  & (0.019) & (0.019) & (0.020) & (0.020) & (0.019) \\ 
-  & & & & & & \\ 
- Life Satisfaction &  & $-$0.015$^{*}$ & $-$0.014$^{\dagger}$ & $-$0.003 & $-$0.002 & $-$0.0001 \\ 
-  &  & (0.006) & (0.007) & (0.006) & (0.006) & (0.006) \\ 
-  & & & & & & \\ 
-\hline \\[-1.8ex] 
-Observations & 3,019 & 3,019 & 3,008 & 3,008 & 3,008 & 3,008 \\ 
-R$^{2}$ & 0.191 & 0.240 & 0.288 & 0.394 & 0.410 & 0.459 \\ 
-Adjusted R$^{2}$ & 0.191 & 0.240 & 0.267 & 0.371 & 0.382 & 0.431 \\ 
-Residual Std. Error & 0.799 (df = 3017) & 0.775 (df = 3015) & 0.760 (df = 2921) & 0.704 (df = 2897) & 0.698 (df = 2873) & 0.670 (df = 2857) \\ 
-F Statistic & 714.588$^{**}$ (df = 1; 3017) & 317.891$^{**}$ (df = 3; 3015) & 13.756$^{**}$ (df = 86; 2921) & 17.141$^{**}$ (df = 110; 2897) & 14.878$^{**}$ (df = 134; 2873) & 16.170$^{**}$ (df = 150; 2857) \\ 
-\hline 
-\hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{6}{r}{$^{\dagger}$ p$<$0.1; $^{*}$ p$<$0.05; $^{**}$ p$<$0.01} \\ 
-\end{tabular} 
-\end{table} 
+\usepackage{geometry}
+
+% Set your desired margins here
+\geometry{
+    left=1in,
+    right=1in,
+    top=1in,
+    bottom=1in,
+    % You can also set other margin parameters such as headheight, headsep, footskip, etc.
+}
+
+\begin{document}
+
+\begin{table}[htbp]
+\begin{tabular}{@{}|l|l|l|l|l|l|l|@{}}
+\toprule
+                                   & Model 1                                                     & Model 2                                                     & Model 3                                                     & Model 4                                                     & Model 5                                                     & Model 6                                                     \\ \midrule
+Mate Competition                   & \begin{tabular}[c]{@{}l@{}}0.437 ***\\ (0.016)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.263 ***\\ (0.020)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.236 ***\\ (0.021)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.206 ***\\ (0.019)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.185 ***\\ (0.019)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.155 ***\\ (0.019)\end{tabular} \\ \midrule
+Job Competition                    &                                                             & \begin{tabular}[c]{@{}l@{}}0.250 ***\\ (0.019)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.236 ***\\ (0.019)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.077 ***\\ (0.020)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.065 ***\\ (0.020)\end{tabular} & \begin{tabular}[c]{@{}l@{}}0.056 ***\\ (0.019)\end{tabular} \\ \midrule
+Life Satisfaction                  &                                                             & \begin{tabular}[c]{@{}l@{}}-0.015*\\ (0.006)\end{tabular}   & \begin{tabular}[c]{@{}l@{}}-0.014\\ (0.007)\end{tabular}    & \begin{tabular}[c]{@{}l@{}}-0.003\\ (0.006)\end{tabular}    & \begin{tabular}[c]{@{}l@{}}-0.002\\ (0.006)\end{tabular}    & \begin{tabular}[c]{@{}l@{}}-0.0001\\ (0.006)\end{tabular}   \\ \midrule
+Socio-Demographics                 &                                                             &                                                             & X                                                           & X                                                           & X                                                           & X                                                           \\ \midrule
+National Attitudes Toward Refugees &                                                             &                                                             &                                                             & X                                                           & X                                                           & X                                                           \\ \midrule
+Local Attitudes Toward Refugees    &                                                             &                                                             &                                                             &                                                             & X                                                           & X                                                           \\ \midrule
+Additional Controls                &                                                             &                                                             &                                                             &                                                             &                                                             & X                                                           \\ \midrule
+$N$                                & 3019                                                        & 3019                                                        & 3008                                                        & 3008                                                        & 3008                                                        & 3008                                                        \\ \midrule
+$R^2$                              & 0.191                                                       & 0.240                                                       & 0.288                                                       & 0.394                                                       & 0.410                                                       & 0.459                                                       \\ \bottomrule
+\end{tabular}
+\end{table}
+\end{document}
+
